<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_feedback"
        android:icon="@drawable/ic_action_feedback"
        android:showAsAction="ifRoom"
        android:title="@string/feedback"
        android:titleCondensed="@string/feedback">
    </item>
    <item
        android:id="@+id/item_add_to_calendar"
        android:icon="@drawable/ic_action_add_to_calendar"
        android:showAsAction="ifRoom"
        android:title="@string/addToCalendar">
    </item>
    <item
        android:id="@+id/item_set_alarm"
        android:icon="@drawable/ic_action_set_alarm"
        android:showAsAction="ifRoom"
        android:title="@string/set_alarm">
    </item>
    <item
        android:id="@+id/item_clear_alarm"
        android:icon="@drawable/ic_action_clear_alarm"
        android:showAsAction="ifRoom"
        android:title="@string/delete_alarm"
        android:visible="false">
    </item>
    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/item_fav"
        android:icon="@drawable/ic_action_unfav"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_highlight">
    </item>
    <item
        android:id="@+id/item_unfav"
        android:icon="@drawable/ic_action_fav"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_highlight"
        android:visible="false">
    </item>

</menu>