<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            >

        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingBottom="15dp"
                android:src="@drawable/dialog_logo">
        </ImageView>

        <TextView
                android:id="@+id/eventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|top"
                android:paddingBottom="5dp"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="33. Chaos Communication Congress"/>

        <TextView
                android:id="@+id/eventSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textColor="#FFF"
                android:textStyle="italic"
                android:typeface="serif"
                tools:text="Works for me">
        </TextView>

        <TextView
                android:id="@+id/conference_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:singleLine="false"
                style="@style/TextViewLinks"
                tools:text="https://events.ccc.de/congress/2016"/>

        <TextView
                android:id="@+id/eventVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                tools:text="Fahrplan BAD NETWORK/FIREWALL">
        </TextView>

        <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="15dp"
                tools:text="App Version 1.33.13">
        </TextView>

        <include
                layout="@layout/horizontal_line"/>

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:text="@string/usage">
        </TextView>

        <include
                layout="@layout/horizontal_line" />

        <TextView
                android:id="@+id/app_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:text="@string/app_disclaimer" />
        <include
                layout="@layout/horizontal_line"/>

        <TextView
                android:id="@+id/copyright_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:linksClickable="true"
                tools:text="@string/copyright_logo"/>

        <TextView
                android:id="@+id/source_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                style="@style/TextViewLinks"
                tools:text="@string/source_code"/>

        <TextView
                android:id="@+id/issues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                style="@style/TextViewLinks"
                tools:text="@string/issues"/>

        <TextView
                android:id="@+id/google_play_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                style="@style/TextViewLinks"
                tools:text="@string/google_play_store"/>

        <include
                layout="@layout/horizontal_line"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:text="@string/libraries">
        </TextView>

        <include
                layout="@layout/horizontal_line"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:text="@string/copyright_notes">
        </TextView>


        <include
                layout="@layout/horizontal_line"/>

        <include
                layout="@layout/build_info" />

    </LinearLayout>

</ScrollView>